# entropy-garden

./: .gitignore  Anchor.toml  README.md  add-airdrop.py  add-bloom.py  add-carbon.py  add-metadata-instruction.py  add-pulse.py  allocate-mainnet.js  bootstrap-testnet.js  calibrate-carbon.py  check-bloom-round.js  check-metaplex.js  check-tempo.js  check-testnet.js  crank-balance-check.sh  create-eg-metadata.js  delete-prediction-quests.py  diag-plant.js  diag-step.js  extend-bloom-window.py  fix-bloom-winner.py  fix-bloom.py  fix-cargo.py  fix-harvest-math.py  index.html  init-eg-mainnet.js  init-eg.js  package.json  patch-heartwalker-v2.py  patch-heartwalker.py  pull-tokenomics.js  restore-carbon-mainnet.py  sample-stress.js  test-allocations.js  test-bloom-full.js  test-carbon-harvest.js  test-carbon.js  test-storm.js  test-thread-full.js  (+6 more)
crank/: index.ts
programs/entropy-garden/: Cargo.toml
programs/entropy-garden/src/: error.rs  lib.rs
programs/entropy-garden/src/eg/: airdrop.rs  bloom.rs  carbon.rs  instructions.rs  metadata.rs  mod.rs  pulse.rs.deleted  skyread.rs  thread.rs
programs/entropy-garden/src/instructions/: mod.rs
programs/entropy-garden/src/math/: decay.rs
programs/entropy-garden/src/state/: mod.rs
scripts/: bootstrap.ts  status.ts
site/: DEPLOY.md  airdrop-proofs.json  ariadne-testnet.html  ariadne.html  bloom.html  carbon.html  claim.html  eg-metadata.json  egtest.html  garden.html  index.html  map.html  rose.html  skyread-mainnet.html  skyread.html  tree.html  wallet.js
tests/: entropy-garden.ts
tests-bankrun/: compost.test.ts
(+1 files in other folders)
